# portfolio_analyzer

./: .gitignore  AGENTS.md  Makefile  README.md  all_sortino_ratios.csv  optimal_portfolio.py  optimizacion_genetico.py  portfolio_analyzer_cli.py  pyproject.toml  requirements.txt  scrapper.py  scrapper_diario.py  sortino.py
.github/workflows/: ci.yml
ai_agent/: Home.py  __init__.py  agentValuationGordon.py  agentValuationMultiple.py  agents.py  backtester.py  env_loader.py  llm_utils.py  main.py  tools.py  ui_helpers.py
ai_agent/pages/: 01_portfolio_agent.py  02_portfolio_optimizer.py  03_valuation_agent.py  04_sec_filings.py  10_sortino_scanner.py  11_commodities_spread.py  12_bcra_macro.py  13_indec_trade_balance.py  14_macro_dashboard_argentina.py  15_valuation_agent_v2.py  SEC_Agent.py  Valuation_Agent.py  agentValuations.py  agents.py  portfolio_optimizer.py  secAgent.py
ai_agent/valuation_v2/: __init__.py  assistant.py  engine.py  market_assumptions.py  schemas.py
scripts/: bcra.py  indec_balanza_comercial.py  optimal_portfolio.py  scrapper_diario.py  sortino.py
scripts/legacy/: optimizacion_genetico.py  scrapper.py  sharpe.py
scripts/legacy_archive/: README.md  sharpe.py
skills/damodaran-valuation-agent/: SKILL.md
skills/damodaran-valuation-agent/agents/: openai.yaml
src/portfolio_analyzer/: __init__.py
src/portfolio_analyzer/analytics/: __init__.py  agent.py  (+2 more)
tests/: test_cli_smoke.py  test_macro_data.py  test_optimizer_data.py  test_portfolio_ui_helpers.py  test_settings_smoke.py  test_sortino_ranking.py  test_valuation_v2_engine.py
(+10 files in other folders)
